--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,79 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseurl = "http://www.example.com"
+title = "bradleycarey"
+
+theme = "hugo-coder"
+
+languagecode = "en"
+defaultcontentlanguage = "en"
+
+paginate = 20
+canonifyurls = true
+
+pygmentsstyle = "b2"
+pygmentscodefences = true
+pygmentscodefencesguesssyntax = true
+
+disqusShortname = "bradleycarey"
+
+[params]
+    author = "Bradley Carey"
+    description = "Bradley Carey's personal website"
+    keywords = "blog,developer,personal"
+    info = "Full Stack Developer"
+    avatarurl = "images/avatar.jpg"
+    footercontent = "My name is Brad and I love learning new things."
+
+    dateformat = "Jan 2, 2006"
+
+    hideCredits = true
+    hideCopyright = true
+
+    # Git Commit in Footer, uncomment the line below to enable it.
+    #commit = "https://github.com/avianbc/blog/tree"
+
+    rtl = false
+
+    # Use inverted colors
+    inverted = false
+
+    # Series see also post count
+    maxSeeAlsoItems = 5
+
+    # Custom CSS
+    custom_css = []
+
+[taxonomies]
+  category = "categories"
+  series = "series"
+  tag = "tags"
+
+[[params.social]]
+    name = "Github"
+    icon = "fab fa-github"
+    weight = 1
+    url = "https://github.com/avianbc/"
+[[params.social]]
+    name = "LinkedIn"
+    icon = "fab fa-linkedin"
+    weight = 4
+    url = "https://www.linkedin.com/in/bradley-carey-83ba3554/"
+[[params.social]]
+    name = "LinkedIn"
+    icon = "fab fa-stack-overflow"
+    weight = 4
+    url = "https://stackoverflow.com/users/636942/br4d"
+
+
+[languages]
+    [languages.en]
+        languagename = "English"
+
+        [[languages.en.menu.main]]
+        name = "About"
+        weight = 1
+        url = "/about/"
+
+        [[languages.en.menu.main]]
+        name = "Blog"
+        weight = 2
+        url = "/posts/"
