--- a/config.toml
+++ b/config.toml
@@ -22,25 +22,16 @@ disqusShortname = "bradleycarey"
     info = "Full Stack Developer"
     avatarurl = "images/avatar.png"
     footercontent = "My name is Brad and I love learning new things."
-
     dateformat = "Jan 2, 2006"
-
     hideCredits = true
     hideCopyright = true
-
-    # Git Commit in Footer, uncomment the line below to enable it.
-    #commit = "https://github.com/avianbc/blog/tree"
-
-    # Series see also post count
     maxSeeAlsoItems = 5
-
-    # Custom CSS
     custom_css = ["css/codecolorer.css","css/custom.css"]
 
 [taxonomies]
-  category = "categories"
-  series = "series"
-  tag = "tags"
+    category = "categories"
+    series = "series"
+    tag = "tags"
 
 [[params.social]]
     name = "Github"
@@ -83,6 +74,6 @@ disqusShortname = "bradleycarey"
         url = "/posts/"
 
         [[languages.en.menu.main]]
-        name = "Contact Me"
+        name = "Contact"
         weight = 3
         url = "/contact/"
