--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://www.bradleycarey.com"
+baseurl = "https://www.bradleycarey.com"
 title = "bradleycarey.com"
 
 theme = "hugo-coder"
