--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ googleAnalytics = "UA-163095528-1"
     author = "Bradley Carey"
     description = "Bradley Carey's personal website"
     keywords = "blog,developer,personal,programming"
-    info = "Senior Full Stack Developer"
+    info = "Lead Full Stack Developer"
     avatarurl = "images/avatar.png"
     favicon_32 = "images/favicon.png"
     favicon_16 = "images/favicon.png"
