--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,7 @@ googleAnalytics = "UA-163095528-1"
     author = "Bradley Carey"
     description = "Bradley Carey's personal website"
     keywords = "blog,developer,personal,programming"
-    info = "Principal Software Engineer - Tech Lead"
+    info = "Principal Software Engineer, Tech Lead"
     avatarurl = "images/avatar.png"
     favicon_32 = "images/favicon.png"
     favicon_16 = "images/favicon.png"
