--- a/config.toml
+++ b/config.toml
@@ -20,6 +20,12 @@ favicon_16 = "images/favicon.png"
 dateformat = "Jan 2, 2006"
 customSCSS = ["custom.scss"]
 since = "2012"
+# Specify light/dark colorscheme
+# Supported values:
+# "auto" (use preference set by browser)
+# "dark" (dark background, light foreground)
+# "light" (light background, dark foreground) (default)
+colorScheme = "auto"
 
 [taxonomies]
 category = "categories"
