--- a/config.toml
+++ b/config.toml
@@ -64,18 +64,7 @@ url = "about/"
 
 [markup]
   [markup.highlight]
-    anchorLineNos = false
-    codeFences = true
-    guessSyntax = false
-    hl_Lines = ''
-    hl_inline = false
-    lineAnchors = ''
-    lineNoStart = 1
-    lineNos = true
-    lineNumbersInTable = true
-    noClasses = true
-    noHl = false
-    style = 'monokai'
+    noClasses = false
     tabWidth = 2
 
 [markup.goldmark.renderer]
