--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ author = "Bradley Carey"
 description = "Bradley Carey's personal website"
 keywords = "blog,developer,personal,programming"
 info = "Principal Software Engineer, Tech Lead"
-avatarurl = "images/avatar.png"
+avatarurl = "images/profile.png"
 favicon_32 = "images/favicon.png"
 favicon_16 = "images/favicon.png"
 dateformat = "Jan 2, 2006"
