--- a/config.toml
+++ b/config.toml
@@ -54,12 +54,16 @@ rel = "alternate"
 type = "application/rss+xml"
 
 [[menu.main]]
-name = "Blog"
+name = "Consulting"
 weight = 1
+url = "consulting/"
+[[menu.main]]
+name = "Blog"
+weight = 2
 url  = "posts/"
 [[menu.main]]
 name = "About"
-weight = 2
+weight = 3
 url = "about/"
 
 [markup]
