--- a/config.toml
+++ b/config.toml
@@ -46,9 +46,14 @@ icon = "fa fa-linkedin"
 weight = 3
 url = "https://www.linkedin.com/in/bradley-carey-83ba3554/"
 [[params.social]]
+name = "Buy Me a Coffee"
+icon = "fa fa-buymeacoffee"
+weight = 4
+url = "https://www.buymeacoffee.com/avian"
+[[params.social]]
 name = "RSS"
 icon = "fa fa-rss"
-weight = 4
+weight = 5
 url = "https://bradleycarey.com/index.xml"
 rel = "alternate"
 type = "application/rss+xml"
