--- a/config.toml
+++ b/config.toml
@@ -67,16 +67,24 @@ rel = "alternate"
 type = "application/rss+xml"
 
 [[menu.main]]
-name = "Consulting"
-weight = 1
-url = "consulting/"
-[[menu.main]]
 name = "Blog"
-weight = 2
+weight = 1
 url  = "posts/"
 [[menu.main]]
-name = "About"
+name = "Categories"
+weight = 2
+url  = "categories/"
+[[menu.main]]
+name = "Tags"
 weight = 3
+url  = "tags/"
+[[menu.main]]
+name = "Consulting"
+weight = 4
+url = "consulting/"
+[[menu.main]]
+name = "About"
+weight = 5
 url = "about/"
 
 [markup]
