Update home screen logo

--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ author = "Bradley Carey"
 description = "Bradley Carey's personal website, featuring articles and resources on software engineering, web development, and more."
 keywords = "blog,programming,software engineering,web development,technology,productivity,consulting"
 info = "Principal Software Engineer, Tech Lead"
-avatarurl = "images/profile.png"
+avatarurl = "images/avatar.png"
 favicon_32 = "images/favicon.png"
 favicon_16 = "images/favicon.png"
 dateformat = "Jan 2, 2006"
