--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ theme = "hugo-coder"
 languagecode = "en"
 defaultcontentlanguage = "en"
 pagination.pagerSize = 20
-googleAnalytics = "UA-163095528-1"
+googleAnalytics = "G-EPD3KTTXVQ"
 enableRobotsTXT = true
 
 [params]
@@ -17,16 +17,11 @@ faviconSVG = "images/bird.svg"
 favicon_32 = "images/favicon.png"
 favicon_16 = "images/favicon.png"
 dateformat = "Jan 2, 2006"
-hideCredits = true
-hideCopyright = true
 customSCSS = ["custom.scss"]
 since = "2012"
-# "auto" (use preference set by browser)
-# "dark" (dark background, light foreground)
-# "light" (light background, dark foreground) (default)
 colorScheme = "auto"
 recentPostCount = "5"
-commit = "https://github.com/avianbc/blog/tree/master"
+commit = "https://github.com/avianbc/blog/tree/"
 
 [params.giscus] # https://giscus.app
 repo = "avianbc/blog"
