Update logo images

--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ author = "Bradley Carey"
 description = "Bradley Carey's personal website, featuring articles and resources on software engineering, web development, and more."
 keywords = "blog,programming,software engineering,web development,technology,productivity,consulting,angular"
 info = "Principal Software Engineer, Tech Lead"
-avatarurl = "images/bird.png"
+avatarurl = "images/logo.png"
 faviconSVG = "images/bird.svg"
 favicon_32 = "images/favicon.png"
 favicon_16 = "images/favicon.png"
